--- a/posts.html
+++ b/posts.html
@@ -1,8 +1,7 @@
 ---
 layout: post-index
 permalink: /posts/
-title: All Posts
-description: "An archive of posts."
+title: Posts
 ---
 
 {% for post in site.posts %}
