--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,7 @@
 ---
 layout: post-index
 permalink: /tags/
-title: Tag Archive
-description: "An archive of posts sorted by tag."
+title: Tags
 ---
 
 <ul class="entry-meta inline-list">
